tag-0.3-20210816b JP
  - datetime_standardize was missing the conversion to UTC

tag-0.3-20210816 JP
  - More flexible datetime_centralize() and datetime_standardize() functions

tag-0.3-20210811 JP
  - Apply datetime_standardize to some EntityJSON dates to force them to have a timezone
    Defaults to Central for UIUC

tag-0.3-20210616 JP
  - Load ResourceGroup=Organizations, Type=Consulting & Support from Affiliation=uiuc.edu 
    TO:  ResourceGroup=Professional Services, Type=Consulting & Support

tag-0.3-20210615 JP
  - Set the Name field correctly to 'title'

tag-0.3-20201126b JP
  - Name files consistently route_uiuc_v3

tag-0.3-20201126 JP
  - Standardize: rename .rc to .sh and update code

tag-0.2-20200908 JP
  - Switch from lockfile to pid module
  - Reorgnize to match latest design in Manage-Resources-V3