@@ -1,3 +1,6 @@
+tag-0.3-20210816c JP
+  - datetime_standardize_asstring needs to return string that is JSON serializable
+
 tag-0.3-20210816b JP
   - datetime_standardize was missing the conversion to UTC
 
